stop logout from overlapping items when window is made smaller

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
   	float: right;
   	margin-right: 8em;
   	margin-top: 0.3em;
+    overflow: hidden;
   }
   #logout:hover{
     background: #203282;
